fix: move form title left and align buttons properly

--- a/packages/interface-default/src/index.module.css
+++ b/packages/interface-default/src/index.module.css
@@ -145,10 +145,16 @@ html[data-theme='dark'] {
 .formContent {
   max-width: 960px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 4rem 1rem 2rem;
 }
 
 @media (min-width: 767px) {
+  .formContent {
+    padding: 4rem 2rem 2rem;
+  }
+}
+
+@media (min-width: 1000px) {
   .formContent {
     padding: 2rem;
   }
@@ -156,7 +162,6 @@ html[data-theme='dark'] {
 
 .formTitle {
   font-size: 1.3em;
-  text-align: center;
 }
 
 /* .formIntro {} */
@@ -164,15 +169,17 @@ html[data-theme='dark'] {
 .formControls {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(max-content, 140px));
+  grid-template-columns: repeat(auto-fit, minmax(max-content, 220px));
   justify-content: center;
   font-size: 1rem;
-  margin: 1rem 0;
+  margin: 1rem auto;
+  max-width: 600px;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 1000px) {
   .formControls {
     font-size: 1.3rem;
+    max-width: none;
   }
 }
 
@@ -249,7 +256,7 @@ html[data-theme='dark'] {
   }
 }
 
-.integrationFieldDetails::before {
+.integrationFieldDetails:not(:last-child)::before {
   content: '';
   display: block;
   border-top: 1px solid currentColor;
